Add tests and code for vigenere cipher

--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_library(libcaesar libcaesar.cpp libcaesar.h)
+add_library(libvigenere libvigenere.cpp libvigenere.h)
+
 add_executable(caesar caesar.cpp)
 target_link_libraries(caesar PRIVATE libcaesar)
