Add transposition starter tests and code [cpp]

--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(substitution substitution.cpp substitution.h)
+add_library(transposition transposition.cpp transposition.h)
 
 add_executable(caesar caesar.cpp)
 target_link_libraries(caesar PRIVATE substitution)
