Add ctest support to cmake

--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -10,3 +10,5 @@ target_link_libraries(tests PRIVATE
                       substitution
                       transposition
 )
+
+add_test(unit tests)
