--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cpp/lib/Catch2"]
 	path = cpp/lib/Catch2
 	url = git@github.com:catchorg/Catch2.git
+[submodule "cpp/lib/CLI11"]
+	path = cpp/lib/CLI11
+	url = git@github.com:CLIUtils/CLI11.git
