Rename cli tool from caesar to ggcrypt

--- a/cpp/src/CMakeLists.txt
+++ b/cpp/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(substitution substitution.cpp substitution.h)
 add_library(transposition transposition.cpp transposition.h)
 
-add_executable(caesar caesar.cpp)
-target_link_libraries(caesar PRIVATE substitution)
-target_link_libraries(caesar PRIVATE CLI11::CLI11)
+add_executable(ggcrypt ggcrypt.cpp)
+target_link_libraries(ggcrypt PRIVATE substitution)
+target_link_libraries(ggcrypt PRIVATE CLI11::CLI11)
